force-app/main/default/objects/Apex_Job_Log__c/Apex_Job_Log__c.object-meta.xml
<CustomObject>
    <label>Apex Job Log</label>
    <nameField>
        <displayFormat>AJL-{00000}</displayFormat>
        <label>Apex Job Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Job Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>