force-app/main/default/objects/Apex_Job_Log__c/fields/Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_Name__c</fullName>
    <label>Apex Class Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>