force-app/main/default/objects/Apex_Job_Log__c/fields/Computed_Variables__c.field-meta.xml
<CustomField>
    <fullName>Computed_Variables__c</fullName>
    <label>Computed Variables</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>