force-app/main/default/objects/Apex_Job_Log__c/fields/Number_of_Records_Processed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Records_Processed__c</fullName>
    <label>Number of Records Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>