force-app/main/default/objects/Apex_Job_Log__c/fields/Query_String__c.field-meta.xml
<CustomField>
    <fullName>Query_String__c</fullName>
    <label>Query String</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>