force-app/main/default/objects/Apex_Job_Log__c/fields/TEST_FIELD__c.field-meta.xml
<CustomField>
    <fullName>TEST_FIELD__c</fullName>
    <label>TEST FIELD</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TEST1</fullName>
            </value>
            <value>
                <fullName>TEST2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>